Fix scrollbar

--- a/app/static/css/style_base.css
+++ b/app/static/css/style_base.css
@@ -22,16 +22,14 @@ div:hover {
     border: 2px solid yellow;
 }
 
-
-
 html,
 body {
     font-family: Roboto, Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
     color: var(--secondary-color);
-    height: 100%;
-    overflow: hidden;
+    background: var(--primary-color);
+    background-attachment: fixed;
 }
 
 #toggle_dark {
